--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
-
-
 }
-
 body{
-    background: white;
-    color: black;
-
+    background: black;
+    color: white;
+}
+#header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(portfolio/logo.png);
+    background-size: cover;
+    background-position: center;
 }
